fix ui orange to blue

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="vi">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/Logo_Trường_Đại_học_FPT.svg" />
+    <link rel="icon" type="image/svg+xml" href="/Logo_Trường_Đại_học_EPU.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FPT Club Management - Quản lý Câu lạc bộ</title>
-    <meta name="description" content="Hệ thống quản lý câu lạc bộ và sự kiện của Đại học FPT" />
+    <title>EPU Club Management - Quản lý Câu lạc bộ</title>
+    <meta name="description" content="Hệ thống quản lý câu lạc bộ và sự kiện của Đại học Điện Lực Hà Nội" />
   </head>
   <body>
     <div id="root"></div>
